<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".detalleSuperHero.view.DetalleSuperHeroFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <ImageView
        android:id="@+id/imgSuperHero"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/darker_gray"
        android:contentDescription="@string/description_img_super_hero"
        app:layout_constraintDimensionRatio="H, 4:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardViewDayaSuperHero"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="@dimen/common_corner_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideTop"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                tools:text="Batman" />

            <TextView
                android:id="@+id/tvFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textStyle="italic"
                tools:text="Terry McGinnis" />

            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textSize="11sp"
                tools:text="DC Comics" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_margin_min"
                android:layout_marginEnd="@dimen/common_margin_min"
                android:layout_marginStart="@dimen/common_margin_min"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/common_margin_min"
                app:strokeWidth="1dp"
                app:strokeColor="@color/blue">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/common_margin_min"
                    android:orientation="vertical">

                    <TextView
                        android:text="@string/text_power_stats"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:gravity="center"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginHorizontal="16dp"
                        android:gravity="bottom"
                        android:layout_marginTop="24dp"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:id="@+id/viewIntelligence"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/lima"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1">
                        </FrameLayout>

                        <View
                            android:id="@+id/viewStrength"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/aqua"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                        <View
                            android:id="@+id/viewSpeed"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/yellow"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                        <View
                            android:id="@+id/viewDurability"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/purple"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                        <View
                            android:id="@+id/viewPower"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/black"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                        <View
                            android:id="@+id/viewCombat"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:background="@color/coral"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>


                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:gravity="bottom"
                        android:layout_marginTop="4dp"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="4dp"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:text="@string/text_intelligence"
                            android:textSize="11sp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="0dp"
                            android:text="@string/text_strength"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="0dp"
                            android:text="@string/text_speed"
                            android:textSize="11sp"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="0dp"
                            android:text="@string/text_durability"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="0dp"
                            android:text="@string/text_power"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                        <TextView
                            android:layout_width="0dp"
                            android:text="@string/text_combat"
                            android:layout_height="wrap_content"
                            android:textSize="11sp"
                            android:singleLine="true"
                            android:maxLines="1"
                            android:layout_marginHorizontal="4dp"
                            android:layout_weight="1"/>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>